--- a/midterm-stylesheet.css
+++ b/midterm-stylesheet.css
@@ -3,7 +3,7 @@
 .container { margin: 0 auto;
 }
 .container {
-  background: blue;
+  background: blue; padding:30px 30px 30px 30px;
 }
 body{
   color: red;
